Fixed recent comments showing under youtube vids, fixed recent comments list overflowing sidebar version 0.80.8

--- a/css/default.css
+++ b/css/default.css
@@ -159,7 +159,6 @@ img {
 #main_menu{
     position:absolute;
     left:10px;
-    height:800px;
     width:170px;
     top:93px;
   float:left;
